# zipline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pytest.ini  release.py
.claude/: PRD.md
.claude/commands/: implement.md  load.md  plan.md
.claude/reference/: formalism.md  use-cases.md  visual-spec.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
.vscode_example/: sessions.json
backend/: README.md  pyproject.toml
backend/src/: app.py
backend/src/api/: __init__.py  attributes.py  data_sources.py  datasets.py  fol.py  learning.py  patterns.py  predicates.py  topology.py
backend/src/core/: dataset_manager.py  dependencies.py  user_data_registry.py
backend/src/fol/: __init__.py  ast.py  evaluator.py  inference.py  parser.py  schema.py  topology.py
backend/src/fol/learning/: __init__.py  beam_search.py  feature_filter.py  learner.py  literal_generator.py  neighborhood_index.py  scoring.py  threshold_finder.py
backend/src/models/: __init__.py  data_source_models.py  fol_schemas.py  graph_models.py  learning_schemas.py  pattern_models.py  predicate_models.py  predicate_requests.py  predicate_responses.py  schemas.py
backend/src/services/: __init__.py  attribute_distributions.py  datasets.py  dimensionality_reduction.py  evaluator.py  metrics.py  path_finder.py  predicate_service.py
backend/src/services/compiler/: __init__.py  base_predicates.py  filter_chain.py  fol_ast.py  fol_parser.py  formal_types.py  optimization.py
backend/src/services/data_sources/: file_importer.py  neo4j_connector.py
backend/src/services/evaluation/: __init__.py  constraint_evaluator.py  fol_evaluator.py  unified_evaluator.py
backend/src/services/inference/: __init__.py  attribute_statistics.py  inference_engine.py  precomputed_metrics.py  predicate_enums.py  predicate_templates.py  quality_metrics.py
backend/src/services/patterns/: __init__.py  config.py  detectors.py  engine.py  instance.py  library.py  matcher.py  pattern_library.py  pattern_matcher.py  types.py
backend/src/services/predicates/: __init__.py  attribute_predicates.py  descriptive.py  topology_predicates.py
backend/src/utils/: __init__.py  logging_config.py  node_validation.py
backend/tests/: conftest.py  test_array_membership_formalism.py  test_beam_search.py  test_cardinality_constraints_formalism.py  test_disjunctive_learning.py  test_fol.py  test_fol_ast_evaluation.py  test_learning.py  test_neighborhood.py  test_node_validation.py  test_path_finding.py  test_predicate_compilation.py  test_roundtrip.py  test_scoring.py  test_typed_neighborhoods.py
client/: README.md  pyproject.toml
client/data/: example_graph.json  social_network_example.json  supply_chain_example.json
client/examples/: 01_supply_chain.ipynb  02_social_network.ipynb  03_bron_threat_intel.ipynb  04_hetionet_biomedical.ipynb
client/graphbridge/: __init__.py  datasets.py  graphbridge.py
client/tests_client/: test_datasets.py  test_graphbridge.py
frontend/: .env.example  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts  utils.ts
frontend/src/api/: attributes.ts  client.ts  data_sources.ts  datasets.ts  fol.ts  graph.ts  index.ts  layers.ts  learning.ts  patterns.ts  predicateComposer.ts  predicates.ts  search.ts
frontend/src/components/: DataSourceModal.tsx  DatasetSelector.tsx  ErrorBoundary.tsx  GraphCanvas.tsx  PatternSection.tsx  ReasoningBar.tsx  RightPanel.tsx  SavedPredicatesSidebar.tsx  SchemaView.tsx  TraceSidebar.tsx
frontend/src/components/datasources/: FileUploadTab.tsx  Neo4jConnectionForm.tsx  Neo4jQueryEditor.tsx  Neo4jTab.tsx  SampleDatasetsTab.tsx
frontend/src/components/panels/: AdjacencyMatrix.tsx  AttributePanel.tsx  DataSpacePanel.tsx  GraphCanvas.tsx  PredicateBridge.tsx  PredicateBridgeNew.tsx  SchemaMatrixView.tsx  UmapVisualization.tsx
frontend/src/components/panels/graph/: ExportModal.tsx  GraphRenderer.ts  GraphToolbar.tsx  GraphView.tsx  NodeTooltip.tsx  exportRenderer.ts  (+1 more)
frontend/src/components/predicate-builder/: FOLDisplay.tsx  FOLExpressionDisplay.tsx  FilterBuilder.tsx  PredicateBuilder.tsx  PredicateComposer.tsx
frontend/src/components/results/: ProjectionResults.tsx  ResultsDisplay.tsx  ValidationErrors.tsx  projectionUtils.ts
frontend/src/components/selections/: PinnedSelectionsStrip.tsx
frontend/src/components/topology/: PathSelectionButton.tsx
frontend/src/components/ui/: AutocompleteInput.tsx  GraphSelector.tsx  Icons.tsx  InfoModal.tsx  Navbar.tsx  PanelHeader.tsx  SearchBar.tsx  ToggleButtonGroup.tsx
frontend/src/config/: labelColors.ts  pixiColors.ts
frontend/src/hooks/: index.ts  useConstraintValidation.ts  useGraphSchema.ts  useNeighborSuggestions.ts  usePathSelection.ts  usePatterns.ts  usePersistedState.ts  usePredicateLearning.ts  useRealtimeValidation.ts
frontend/src/store/: analysisStore.ts  folStore.ts  graphDataStore.ts  learningStore.ts  predicateComposerStore.ts  predicates.ts  storeRegistry.ts
frontend/src/types/: fol.ts  graph.ts  index.ts  predicate.ts
frontend/src/utils/: colors.ts  debounce.ts  fol.ts  folFormatting.ts  folHighlight.tsx  formatting.ts  graphLayout.ts  index.ts  learnedPredicateParser.ts  memoryMonitor.ts  persistence.ts  quadtree.ts  zoom.ts
notebooks/: bron.ipynb  energy.ipynb  primekg.ipynb
scripts/: download_bron.py  download_hetionet.py  fetch_bron.py  fetch_cora.py  fetch_primekg.py  fetch_tennet_nh.py
server/: config.yaml  pyproject.toml
server/src/: app.py  datasets.py  inspector.py  runtime.py  schemas.py
server/src/api/: __init__.py  graph.py  layers.py
server/src/core/: __init__.py  session.py
server/src/layers/: __init__.py  patterns.py  types.py
server/tests_server/: test_api.py  test_patterns.py
(+20 files in other folders)
