[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zipline-backend"
version = "0.1.0"
description = "ZipLine backend server for visual analytics of multivariate graphs"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
    { name = "ZipLine Team" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "networkx>=3.2",
    "numpy>=1.24.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "scikit-learn>=1.7.2",
    "node2vec>=0.4.6",
    "pandas>=2.3.3",
    "colorlog>=6.7.0",
    "pypsa>=0.35.2",
    "neo4j>=5.14.0",
]

[project.optional-dependencies]
datasets = [
    "grid2op>=1.10.0",
    "lightsim2grid>=0.8.0",
    "scipy>=1.11.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/sjoerdvink99/zipline"
Repository = "https://github.com/sjoerdvink99/zipline.git"


[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "networkx",
    "networkx.*",
    "sklearn",
    "sklearn.*",
    "node2vec",
    "node2vec.*",
    "pypsa",
    "pypsa.*",
    "colorlog",
    "colorlog.*",
    "fastapi",
    "fastapi.*",
    "uvicorn",
    "uvicorn.*",
    "neo4j",
    "neo4j.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["api.*", "app"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.8.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
