[project]
name = "graphbridge-server"
version = "0.1.0"
description = "Interactive graph inspection and analysis UI for NetworkX and beyond"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "networkx>=3.5",
    "pydantic>=2.12.3",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "pyyaml>=6.0.0",
    "ipython>=9.7.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "build",
    "twine",
]
llm = [
    "anthropic>=0.18.0",
    "openai>=1.12.0",
]

[project.scripts]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["../frontend/dist/**/*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E701", "E702", "F403"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
check_untyped_defs = true
ignore_missing_imports = true
